hashmap/tests/invalid/no-comma/no-comma.rs
use hashmap::hashmap;
use std::collections::HashMap;

fn main() {
    // args must be separated by commas
    let map: HashMap<_, _> = hashmap!{1 => 'a' 2 => 'b'};
}
